--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             </div>
                             <h4 class="text-2xl font-bold text-gray-900 mb-4">Our Mission</h4>
                             <p class="text-gray-600 text-lg leading-relaxed">
-                                To provide comprehensive technology solutions that empower businesses and individuals to thrive in the digital age. We combine technical expertise with exceptional service to deliver results that exceed expectations.
+                                To provide comprehensive technology solutions that empower businesses and individuals to thrive in this digital age. We combine technical expertise with exceptional service to deliver results that exceed expectations.
                             </p>
                         </div>
                     </div>
@@ -429,7 +429,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold text-lg">Email</h4>
-                                <p class="text-gray-300">info@s3works.co.za</p>
+                                <p class="text-gray-300">martinoslit332@gmail.com</p>
                             </div>
                         </div>
                         <div class="flex items-center">
@@ -437,7 +437,7 @@
                                 <span class="text-xl">📱</span>
                             </div>
                             <div>
-                                <h4 class="font-semibold text-lg">Phone</h4>
+                                <h4 class="font-semibold text-lg">WhatsApp</h4>
                                 <p class="text-gray-300">+27 68 659 2320</p>
                             </div>
                         </div>
@@ -471,7 +471,7 @@
                                 <h4 class="text-xl font-bold text-gray-900 mb-4">Contact Us Today!</h4>
                                 <p class="text-gray-600 mb-6">Get in touch for your free website, hardware repairs, or software solutions</p>
                                 <div class="space-y-4">
-                                    <a href="mailto:info@s3works.co.za" class="block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-all duration-300 transform hover:scale-105">
+                                    <a href="mailto:martinoslit332@gmail.com" class="block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-all duration-300 transform hover:scale-105">
                                         📧 Email Us
                                     </a>
                                     <a href="tel:+27686592320" class="block bg-green-600 text-white px-6 py-3 rounded-lg hover:bg-green-700 transition-all duration-300 transform hover:scale-105">
@@ -514,7 +514,7 @@
                 </div>
                 <div class="border-t border-gray-800 pt-8">
                     <p class="text-gray-400">
-                        © 2024 Software Solutions Services. All rights reserved. | 
+                        © 2023 Software Solutions Services. All rights reserved. | 
                         <span class="text-blue-400">Free websites available - Contact us today!</span>
                     </p>
                 </div>
